<resources>
    <string name="app_name">NMedia</string>
    <string name="text">Nmedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="post_like">Post like</string>
    <string name="post_count_like" translatable="false">0</string>
    <string name="post_count_share" translatable="false">0</string>
    <string name="post_count_view" translatable="false">0</string>
    <string name="post_share">share</string>
    <string name="content" translatable="false">"Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb"</string>
    <string name="post_view">view</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущег</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Enter text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="create">Create</string>
    <string name="edit_message">Edit message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="save">Save</string>
    <string name="add_post">Add</string>
    <string name="channel_name">Notifications</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_add_post">User %1$s add post: %2$s</string>
    <string name="something_went_wrong">Error loading..</string>
    <string name="retry">Обновить</string>
    <string name="there_is_no_posts">Постов нет</string>


</resources>